@@ -3,7 +3,7 @@
   <groupId>org.opengeo</groupId>
   <artifactId>geonode-geoserver-ext</artifactId>
   <packaging>jar</packaging>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.2</version>
   <name>GeoNode GeoServer Extensions</name>
 
   <repositories>
@@ -66,11 +66,6 @@
       <groupId>org.geoserver.extension</groupId>
       <artifactId>excel</artifactId>
       <version>${geoserver.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opengeo.geoserver</groupId>
-      <artifactId>importer</artifactId>
-      <version>3.0-SNAPSHOT</version>
     </dependency>
     <!--dependency>
       <groupId>org.geoserver.community</groupId>
@@ -205,8 +200,8 @@
     </dependency>
   </dependencies>
   <properties>
-    <geotools.version>8.0-RC2</geotools.version>
-    <geoserver.version>2.2-RC1</geoserver.version>
+    <geotools.version>8.0</geotools.version>
+    <geoserver.version>2.2-RC2</geoserver.version>
     <jetty.version>6.1.8</jetty.version>
     <maven.test.search.classdir>true</maven.test.search.classdir>
   </properties>
@@ -242,23 +237,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.5.1</version>
         <configuration>
-          <encoding>UTF-8</encoding>
           <source>1.5</source>
           <target>1.5</target>
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4</version>
-        <configuration>
-            <argLine>-XX:MaxPermSize=256m</argLine>
-        </configuration>
-      </plugin>
-      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
@@ -277,18 +261,8 @@
           <stopKey>geonode-stop</stopKey>
           <scanIntervalSeconds>30</scanIntervalSeconds>
           <contextPath>/geoserver</contextPath>
-
-          <systemProperties>
-            <systemProperty>
-              <name>GEOSERVER_DATA_DIR</name>
-              <value>../build/gs_data/</value>
-            </systemProperty>
-          </systemProperties>
-
-          <webApp>${project.build.directory}/geoserver</webApp>
           
-          <!-- configure the container                 -->
-          <jettyConfig>jetty.xml</jettyConfig>
+          <webApp>${project.build.directory}/geoserver</webApp>
         </configuration>
       </plugin>
 
@@ -314,7 +288,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>2.2</version>
         <configuration>
           <warName>geoserver</warName> 
           <webappDirectory>${project.build.directory}/geoserver</webappDirectory> -->
